# TIMESAT4

./: README.md  file_list_input.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh  tab_save_load.py  tab_settings.py  ts_functions.py
.github/workflows/: CI.yml  publish-PyPI.yml  publish-TestPyPI.yml
src/timesat_gui/: file_list_input.py  tab_run.py  ts_functions.py
templates/: mainapp.html
